Fix logo in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,12 @@ hr {
   width: auto;
 }
 
+.dark .header-logo {
+  background-color: white;
+  border-radius: 50%;
+  padding: 0.5em;
+}
+
 .header-title {
   font-size: 2.6em;
   font-weight: bold;
